# scaling-uod

./: .gitignore  README.md  pyproject.toml  requirements.txt  spark_poc.py
data/: dummy.csv
scaling_uod/: main.py
