[tool.poetry]
name = "scaling-uod"
version = "0.1.0"
description = "TBD."
authors = ["Sivam Pasupathipillai <sivam.pasupathipillai@gmail.com>"]
readme = "README.md"
packages = [{include = "scaling_uod"}]

[tool.poetry.scripts]
scaling-uod-poc = "scaling_uod.main:main"

[tool.poetry.dependencies]
python = ">=3.8,<3.10"
pyspark = "^3.3.1"
scikit-learn = "^1.1.3"

[tool.poetry.group.dev.dependencies]
isort = "^5.10.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
